--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Renovate
 
 on:
   schedule:
-    - cron: '0 2 * * 0'  # Runs weekly on Sundays at 2 AM UTC
+    - cron: '0 2 * * 0'  # Every Sunday at 2 AM UTC
   workflow_dispatch:
 
 jobs:
@@ -14,9 +14,10 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0  # Required so Renovate sees full Git history
+          fetch-depth: 0
 
       - name: Run Renovate
         uses: renovatebot/github-action@v41.0.17
         with:
+          token: ${{ secrets.RENOVATE_TOKEN }}
           configurationFile: renovate.json
